--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Cервис по доставке еды, которую я не ем",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "git":  "git add . && git commit -m \"$npm_config_msg\" && git push"
   },
   "keywords": ["javascript"],
   "author": {
