--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "git":  "git add . && git commit -m \"$npm_config_msg\" && git push"
+    "git":  "git add . && git commit -m \"$msg\" && git push"
   },
   "keywords": ["javascript"],
   "author": {
