--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Cервис по доставке еды, которую я не ем",
   "main": "index.js",
   "scripts": {
-    "git":  "git add . && git commit -m \"$msg\" && git push"
+    "git":  "git add . && git commit -m $msg && git push"
   },
   "keywords": ["javascript"],
   "author": {
